--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ashraf20026.github.io/Portfolio",
+  "homepage": "https://ashraf20026.github.io/portfolio",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
